// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`attributes convert style values 1`] = `
<div
  style={
    Object {
      "margin": "0 auto",
      "padding": "0 10px",
    }
  }
>
  <span
    style={
      Object {
        "fontSize": 12,
      }
    }
  />
</div>
`;

exports[`attributes correctly map HTML attributes to react props 1`] = `
<div>
  <label
    className="input-text"
    htmlFor="name"
  />
  <div
    aria-describedby="info"
    contentEditable={true}
    data-type="calendar"
    id="test"
    spellCheck="true"
  />
  <link
    xlinkActuate="other"
    xmlLang="en"
  />
  <svg
    colorInterpolationFilters="sRGB"
    fillRule="evenodd"
    viewBox="0 0 24 24"
  >
    <path
      fill="#ffa0"
    />
  </svg>
  <img
    crossOrigin="true"
    srcSet="https://img.src"
  />
  <iframe
    allowFullScreen={true}
    srcDoc="<p>html</p>"
  />
  <input
    autoComplete="on"
    autoFocus={true}
    maxLength="10"
    readOnly={true}
  />
  <button
    accessKey="s"
  >
    Stress reliever
  </button>
  <time
    dateTime="2018-07-07"
  >
    July 7
  </time>
</div>
`;

exports[`attributes css html entities 1`] = `
<div
  style={
    Object {
      "fontFamily": "Consolas, \\"Liberation Mono \\"",
    }
  }
/>
`;

exports[`attributes css vendor prefixes 1`] = `
<div
  style={
    Object {
      "WebkitTextSizeAdjust": "100%",
      "msTextSizeAdjust": "100%",
    }
  }
>
  
        prefix
      
</div>
`;

exports[`attributes ignore invalid style 1`] = `
<div
  className="component-overflow"
  style={Object {}}
>
  Explore Categories
</div>
`;

exports[`attributes ignore partially invalid style 1`] = `
<div
  className="component-overflow"
  style={
    Object {
      "color": "\\"red\\"",
    }
  }
>
  Explore Categories
</div>
`;

exports[`attributes preserve child of style tag 1`] = `
<style
  dangerouslySetInnerHTML={
    Object {
      "__html": "ul > li {
          list-style: none
        }
  
        div[data-id=\\"test\\"]:not(.y) {
          display: none;
        }",
    }
  }
/>
`;

exports[`attributes style with url & protocol 1`] = `
<div
  className="tera-promo-card--header"
  style={
    Object {
      "backgroundImage": "url(https://d1nabgopwop1kh.cloudfront.net/xx)",
    }
  }
/>
`;

exports[`core element inside text node 1`] = `
Array [
  "what are ",
  <strong>
    you
  </strong>,
  " doing?",
]
`;

exports[`core ignore comment 1`] = `
<div>
  no comment
</div>
`;

exports[`core ignore multiline html comment 1`] = `
<div>
  no multiline comment
</div>
`;

exports[`core it works 1`] = `
<p>
  This is cool
</p>
`;

exports[`core multi children 1`] = `
Array [
  <p>
    Multi
  </p>,
  <p>
    Component
  </p>,
]
`;

exports[`core self closing component 1`] = `
<div>
  <img
    src="https://www.google.com/logo.png"
  />
</div>
`;

exports[`encoding decode html attributes 1`] = `
<a
  href="https://www.google.com/?a=b&c=d"
>
  test
</a>
`;

exports[`encoding decode html entities on defaultMap 1`] = `
<p>
  & and &
</p>
`;

exports[`encoding unescape html entities 1`] = `
<div
  className="entities"
>
  & and &
</div>
`;

exports[`options dangerouslySetChildren dangerously render empty script tag 1`] = `
<script
  type="text/javascript"
/>
`;

exports[`options dangerouslySetChildren no dangerously render script tag 1`] = `
<script
  data-cfasync="false"
  type="text/javascript"
>
  
          var gtm4wp_datalayer_name = "dataLayer";
          var dataLayer = dataLayer || [];
          dataLayer.push({"pagePostType":"post","pagePostType2":"single-post","pageCategory":["kalender-cuti"],"pagePostAuthor":"Candra Alif Irawan"});
        
</script>
`;

exports[`options dangerouslySetChildren should dangerously set html for required tags 1`] = `
<pre
  dangerouslySetInnerHTML={
    Object {
      "__html": "&lt;a href=&quot;/&quot;&gt;Test&lt;/a&gt;",
    }
  }
/>
`;

exports[`options preserveAttributes allow preserve some attributes 1`] = `
<div
  ng-if="x"
>
  
          
  <div
    tv-abc="d"
    tv-xxx="y"
  />
  
        
</div>
`;

exports[`options transform custom component 1`] = `
<p
  className="css-x243s"
  data-custom="true"
>
  Custom component
</p>
`;

exports[`options transform default mapping 1`] = `
<div>
  <span>
     
  </span>
  <div>
    <span>
      Default mapping
    </span>
  </div>
  <span>
     
  </span>
</div>
`;

exports[`whitespace allow newline text node between tags 1`] = `
<pre>
  <span>
    Hello
  </span>
  

  <span>
    World
  </span>
</pre>
`;

exports[`whitespace allow whitespace only text nodes 1`] = `
Array [
  <span>
    Hello
  </span>,
  " ",
  <span>
    World
  </span>,
]
`;

exports[`whitespace remove whitespace on table elements 1`] = `
<table>
  <tbody>
    <tr>
      <th>
         title
      </th>
    </tr>
    <tr>
      <td>
        entry 
      </td>
    </tr>
  </tbody>
</table>
`;
